syntax = "proto3";
package tcp;

option go_package = "gen/";


message Request {
    string Method = 1;
    string Proto = 2;
    string TargetUri = 3;
    string Path = 4;
    map<string, string> Headers = 5;
    string Body = 6;
    string RequestId = 7;
}

message Response {
    string Status = 1;
    int32 StatusCode = 2;
    int32 ProtoMajor = 3;
    int32 ProtoMinor = 4;
    string Proto = 5;
    map<string, string> Headers = 6;
    string Body = 7;
    string RequestId = 8;
}
